# read-stdin

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  tests.rs
